# nixium

./: .envrc  .gitignore  Cargo.toml  README.md  build.sh  release  run  send  shell.nix
.github/: copilot-instructions.md
.github/workflows/: build-release.yml
frontend/: package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: Chat.svelte  CommandPalette.svelte  ExtensionsPanel.svelte  FileBrowser.svelte  FindInFilesPanel.svelte  FolderPicker.svelte  McpPanel.svelte  SettingsModal.svelte  Terminal.svelte  actions.ts  agentUtils.ts  extensions.ts  types.ts  useCodeMirror.ts
frontend/src/routes/: +layout.ts  +page.svelte
frontend/static/: manifest.json
src/: ai.rs  assets.rs  chats.rs  error.rs  extensions.rs  fs.rs  main.rs  state.rs  store.rs  terminal.rs
src/mcp/: external.rs  mod.rs  npm.rs  rust.rs  weather.rs
